--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,7 +16,9 @@
     "cors": "^2.8.5",
     "cros": "^1.0.1",
     "express": "^4.21.2",
-    "mysql": "^2.18.1",
+    "mysql": "^2.18.1"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.9"
   }
 }
