--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "cros": "^1.0.1",
     "express": "^4.21.2",
+    "multer": "^1.4.5-lts.2",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
